# inferline

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose-local-demo.yml  docker-compose.yml  pyproject.toml
.claude/: RESEARCH.md  settings.local.json
.github/workflows/: deploy.yml  undeploy.yml
docker/: docker-compose-inferline.yml  docker-compose-local-demo.yml  docker-compose-tinyllama.yml  frontend.Dockerfile  inferline.Dockerfile  llamacpp-tinyllama.Dockerfile  openai-provider.Dockerfile
docs/: index.md
examples/: __init__.py
inferline/: __init__.py  frontend.py  openai_provider.py  server.py
inferline/schemas/: openai.py
nginx/: app.conf  inferline.cloudrift.ai  inferline.conf  nginx.conf
scripts/: setup.py
src/inferline/: __init__.py  version.py
tests/: __init__.py  conftest.py
workflows/: deploy.yml  undeploy.yml
